@@ -7,6 +7,14 @@
     2. /var/cache/edb/world is now /var/lib/portage/world.
     3. /etc/portage/profile/virtuals is _USER_ configs only.
 
+  10 Nov 2004; Brian Harring <ferringb@gentoo.org> pym/dcache.py:
+  Updated to make it more memory efficient- slots based, uses weakref
+  to handle symlink'd dirs.  Still a bit slower, but it's also stat'ing
+  all directories upto the target directory.  That can probably be removed.
+  Note, there is a bug in it currently- invalidate isn't a valid node method.
+  Nobody should hit this though, since dcache is only used in treewalk.
+  I'll correct it in a few days.
+
   10 Nov 2004; Brian Harring <ferringb@gentoo.org> pym/portage_locks.py:
   Reversion of lock choice strategy to what I stuck in originally, and 
   removal of the 3s sleep in hardlink.  The 3s is obviously bad, the 
